# FastenerCreator

./: .gitignore  README.md
Program/: Dockerfile  pyproject.toml
Program/src/stepgen_app/: README.md  __init__.py  data_checks.py  gui.py  launch.py  main.py  standards.py  step_generator.py  validator.py
Program/src/stepgen_app/static/: index.html
Program/tests/: test_api.py  test_validation.py
Scraps/: .$Arch.drawio.bkp  Arch.drawio  cadqueryTrial.py  cadqueryandpydantic.py
